src/objects/Criteria_Values__c.object
<CustomObject>
    <fields>
        <fullName>Criteria_Values__c</fullName>
        <label>Criteria</label>
        <referenceTo>Criteria__c</referenceTo>
        <relationshipLabel>Criteria Values</relationshipLabel>
        <relationshipName>Criteria_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Score</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Criteria Value</label>
    <nameField>
        <displayFormat>CV-{0000}</displayFormat>
        <label>Criteria Value Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criteria Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>